# bluesnow-server

./: .env  .gitignore  Cargo.toml
crates/cdc/: Cargo.toml
crates/cdc/src/: lib.rs
crates/cdc/src/sqlite/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs  migrate.rs
crates/iden/: Cargo.toml
crates/iden/src/: lib.rs
crates/iden/src/v0_1/: api.rs  menu.rs  meta_info.rs  mod.rs  node.rs  node_mtm_taxonomy.rs  role.rs  role_mtm_api.rs  role_mtm_menu.rs  taxonomy.rs  user.rs  user_mtm_role.rs
crates/macros/: Cargo.toml
crates/macros/src/: derive_data_object.rs  from_any_row.rs  lib.rs
crates/migration/: Cargo.toml
crates/migration/src/: commands.rs  db.rs  lib.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/models/src/do/: api.rs  meta_info.rs  mod.rs  node.rs  node_mtm_taxonomy.rs  role.rs  role_mtm_api.rs  taxonomy.rs  user.rs  user_mtm_role.rs
crates/models/src/do/utils/: mod.rs
crates/models/src/req/: user.rs
crates/models/src/resp/: user.rs
crates/result/: Cargo.toml
crates/result/src/: code.rs  lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/search/src/meilisearch/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: context.rs  lib.rs
crates/server/src/config/: db.rs  jwt.rs  mod.rs
crates/server/src/handler/: user.rs
crates/server/src/log/: mod.rs
crates/server/src/middleware/: jwt.rs
crates/server/src/repo/: mod.rs  node.rs  user.rs  util.rs
crates/server/src/routes/: mod.rs
crates/server/src/service/: init.rs  mod.rs  user.rs
crates/util/: Cargo.toml
crates/util/src/: hash.rs  lib.rs  model.rs  pwd.rs  query.rs  row.rs
migrations/sqlite/: 20240816014305_init.sql
