[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
server={path = "crates/server"}
iden={path = "crates/iden"}
util={path = "crates/util"}
result={path = "crates/result"}
models={path = "crates/models"}
sqlx="0.8.0"
sea-query="0.31.0"
clap="4.5.15"
tokio="1.39.2"
axum="0.7.5"
uuid="1.10.0"
jsonwebtoken="9.3.0"
argon2="0.5.3"
serde="1.0.207"
serde_json="1.0.125"
garde="0.20.0"
thiserror="1.0.63"
anyhow="1.0.86"
figment="0.10.19"
chrono = "0.4.38"