[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
lto = true
strip= true
codegen-units = 1

[workspace.dependencies]
server={path = "crates/server"}
iden={path = "crates/iden"}
util={path = "crates/util"}
result={path = "crates/result"}
models={path = "crates/models"}
macros={path = "crates/macros"}
sqlx= "0.8.0"
sea-query="0.32.0-rc.1"
clap="4.5.15"
tokio="1.39.2"
axum="0.7.5"
uuid="1.10.0"
jsonwebtoken="9.3.0"
argon2="0.5.3"
serde="1.0.207"
serde_json="1.0.125"
garde="0.20.0"
thiserror="1.0.63"
anyhow="1.0.86"
figment="0.10.19"
chrono = "0.4.38"
cfg-if = "1.0.0"
strum = "0.26.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = "0.5.2"
syn = "2.0.74"
proc-macro2 = "1.0.86"
quote = "1.0.36"
darling = "0.20.10"
heck="0.5.0"
sea-query-binder="0.7.0-rc.1"
axum-extra = "0.9.3"
tantivy = "0.22.0"
tantivy-jieba = "0.11.0"
meilisearch-sdk = "0.27.1"
tera = "1.20.0"