[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[features]
sqlite=["sqlx/sqlite"]
postgres=["sqlx/postgres"]
mysql=["sqlx/mysql"]

[dependencies]
sqlx={workspace = true,features = ["runtime-tokio-rustls","any","sqlite"]}
sea-query = {workspace = true}
util={workspace = true}
models = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
