[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[features]
sqlite=["sqlx/sqlite"]
postgres=["sqlx/postgres"]
mysql=["sqlx/mysql"]

[dependencies]
sqlx={workspace = true,features = ["runtime-tokio-rustls","any"]}
sea-query = {workspace = true}
sea-query-binder = {workspace = true,features = ["sqlx-any","runtime-tokio-rustls"]}
util={workspace = true}
models = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
