[package]
name = "models"
version = "0.1.0"
edition = "2021"

[features]
sqlite=["sqlx/sqlite"]
postgres=["sqlx/postgres"]
mysql=["sqlx/mysql"]

[dependencies]
uuid = {workspace = true,features = ["serde","v7"]}
chrono = {workspace = true,features = ["serde"]}
sea-query = {workspace = true,features = ["with-uuid","with-chrono","attr"]}
sqlx= {workspace = true,features = ["uuid","chrono","any"]}
garde = {workspace = true,features = ["derive","email"]}
serde = {workspace = true,features = ["derive"]}
result = {workspace = true}
util={workspace=true}
iden={workspace = true}
sea-query-binder = {workspace = true,features = ["with-chrono","with-uuid","sqlx-any"]}
serde_json={workspace=true}