[package]
name = "result"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {workspace = true}
thiserror = {workspace = true}
serde = {workspace = true,features = ["derive"]}
strum={workspace = true,features = ["derive"]}
argon2 = {workspace = true,features = ["std"]}
sqlx = {workspace = true,features = ["runtime-tokio-rustls"]}
sea-query = {workspace = true}
garde = {workspace = true}
tokio = {workspace = true}