[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
sqlite=["sqlx/sqlite"]
postgres=["sqlx/postgres"]
mysql=["sqlx/mysql"]
log=["tracing","tracing-subscriber","util/log"]

[dependencies]
anyhow={workspace=true}
axum={workspace=true}
axum-extra = {workspace = true,features = ["typed-header"]}
tokio={workspace=true,features = ["signal"]}
result = {workspace = true}
sqlx={workspace=true,features = ["runtime-tokio-rustls","chrono","uuid","any","json"]}
sea-query={workspace=true,features = ["with-uuid","with-chrono","with-json"]}
sea-query-binder = {workspace = true,features = ["with-uuid","with-chrono","sqlx-any","runtime-tokio-rustls","with-json"]}
models={workspace = true }
util={workspace = true}
uuid= {workspace = true,features = ["v7","serde"]}
cfg-if = {workspace = true}
tracing = {workspace = true,optional = true}
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter"] }
tower-http = {workspace = true,features = ["trace"]}
garde = {workspace = true}
serde = {workspace = true}
jsonwebtoken = {workspace = true}
chrono = {workspace = true}